# aitrade

./: .README.md.kate-swp  .gitignore  .ig_client.py.kate-swp  README.md  aitrader.py  etoro_client.py  gemini_client.py  ig_client.py  main.py  pyproject.toml  requirements.txt
clients/: gemini_client.py  ig_client.py
server/: http_server.py
server/templates/: index.html
src/: aitrader.py  main.py
src/clients/: gemini_client.py  ig_client.py
src/indicators/: indicators.py
src/server/: http_server.py
src/server/static/css/: style.css
src/storage/: storage.py
storage/: storage.py
tests/indicators/: test_indicators.py
